# recall

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.claude/commands/: release.md
.github/workflows/: release.yml  test.yml  update-flake.yml
src/: app.rs  cli.rs  lib.rs  main.rs  selector.rs  session.rs  theme.rs  tui.rs  ui.rs
src/index/: mod.rs  schema.rs  state.rs
src/parser/: claude.rs  codex.rs  factory.rs  mod.rs  opencode.rs
tests/: integration.rs
tests/fixtures/.claude/projects/test-project/: session.jsonl
tests/fixtures/.claude/projects/test-project-large-output/: session.jsonl
tests/fixtures/.claude/projects/test-project-with-tools/: session.jsonl
tests/fixtures/.codex/sessions/: test-codex.jsonl
tests/snapshots/: integration__ui_no_query_everywhere_scope.snap  integration__ui_no_query_folder_scope.snap  integration__ui_with_query_everywhere_scope_no_results.snap  integration__ui_with_query_folder_scope_no_results.snap
